--- a/src/scss/global/global.scss
+++ b/src/scss/global/global.scss
@@ -7,8 +7,8 @@
 }
 
 .container {
-    max-width: 360px;
-    padding: 64px 16px;
+    max-width: 1182px;
+    padding: 0 16px;
     width: 100%;
     margin: 0 auto;
 }
@@ -38,4 +38,30 @@ p {
   line-height: 24px; /* 171.429% */
   text-align: center;
 
+}
+@media (min-width:768px) {
+  h3 {
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 110%;
+  }
+  p {
+    align-self: stretch;
+    max-width: 640px;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;  
+  }
+}
+@media (min-width:1280px) {
+  h3 {
+    text-align: left; 
+  }
+  p {
+    text-align: left; 
+    max-width: 574px;
+
+  }
 }
